# locate-anything.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: BENCHMARK.md  bench.py  plot.py  quant_bench.py  quant_results.json  results.json
benchmarks/demo/: build_specs.py  dgx_measure.py  dgx_official.json  dgx_official.py  dgx_official_f16.json  image_race.py  spec_bus.json  spec_bus_f16.json  spec_coco_kitchen.json  spec_coco_kitchen_f16.json  spec_coco_skater.json  spec_coco_skater_f16.json
docs/superpowers/plans/: 2026-06-08-locate-anything-m0-m1.md  2026-06-08-locate-anything-m2-moonvit.md  2026-06-08-locate-anything-m3-projector-lm.md  2026-06-08-locate-anything-m4-ar-decode.md  2026-06-08-locate-anything-m5-hybrid-pbd.md  2026-06-09-locate-anything-m6a-engine-completion.md  2026-06-09-locate-anything-m6b-packaging.md
docs/superpowers/specs/: 2026-06-08-locate-anything-cpp-design.md
examples/cli/: CMakeLists.txt  main.cpp
include/: la_capi.h  la_gguf_keys.h
scripts/: convert_locateanything_to_gguf.py  diff_upstream.py  download_model.py  dump_fast_reference.py  dump_mtp_reference.py  dump_preproc_reference.py  dump_reference.py  dump_slow_reference.py  gen_gguf_keys_header.py  gen_vit_fixtures.py  gguf_keys.py  la_reference.py  quantize_gguf.py  reference_npz_to_gguf.py  requirements.txt
src/: backend.cpp  backend.hpp  boxes.cpp  boxes.hpp  cli.cpp  cli.hpp  common.hpp  engine.cpp  engine.hpp  ggml_extend.hpp  image_io.cpp  image_io.hpp  la_capi.cpp  lm.cpp  lm.hpp  model_loader.cpp  model_loader.hpp  mtp.cpp  mtp.hpp  pil_resize.cpp  pil_resize.hpp  projector.cpp  projector.hpp  prompt.cpp  prompt.hpp  quantize.cpp  quantize.hpp  qwen2.cpp  qwen2.hpp  tokenizer.cpp  tokenizer.hpp  visualize.cpp  visualize.hpp  vit_encoder.cpp  vit_encoder.hpp  vit_posemb.cpp  vit_posemb.hpp  vit_rope.cpp  vit_rope.hpp
tests/: CMakeLists.txt  parity.hpp  test_backend.cpp  test_capi.cpp  test_cli.sh  test_decode.cpp  test_engine.cpp  test_fast.cpp  test_ggml_extend.cpp  test_lm.cpp  test_model_loader.cpp  test_mtp.cpp  test_preproc.cpp  test_projector.cpp  test_quantize.cpp  test_smoke.cpp  test_tokenizer.cpp  test_visualize.cpp  test_vit_encoder.cpp  test_vit_posemb.cpp  test_vit_rope.cpp
tests/fixtures/: fixture_spec.json
tests/python/: test_convert_gguf.py  test_dump_reference.py
